<resources>
    <string name="app_name">TODOs</string>
    <string name="action_new_task">New task</string>
    <string name="action_settings">Settings</string>
    <string name="tasks_delete_task"></string>

    <string name="detailed_task_title_field_hint">Title</string>
    <string name="detailed_task_description_field_hint">Task description</string>
    <string name="detailed_task_form_description">Fill form below. Only task description field is required. </string>
    <string name="detailed_task_save_btn">Save</string>
    <string name="detailed_task_edit_btn">Edit</string>
    <string name="detailed_task_delete_btn">Delete</string>
    <string name="detailed_task_invalid_date_format">Invalid date format.</string>
    <string name="detailed_task_empty_description_field">Description is required.</string>
</resources>
